<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ltHost"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_background"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary_color"
        app:title="@string/appName"
        app:titleTextAppearance="@style/Toolbar.TitleText"

        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inpCustomerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/customerNameHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inpEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/emailHint">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inpPhNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/phoneNumberHint">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPhNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/typeOfBeverageText"
                android:layout_marginTop="16dp"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <RadioGroup
                android:id="@+id/rgBeverageType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rdCoffee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/coffeeTitle"
                    android:textSize="16sp"
                    />
                <RadioButton
                    android:id="@+id/rdTea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/teaTitle"
                    android:textSize="16sp"
                    />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/additionalsTitle"
                android:layout_marginTop="16dp"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <CheckBox
                android:id="@+id/chkMilk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:text="@string/milkTitle"
                />

            <CheckBox
                android:id="@+id/chkSugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:text="@string/sugarTitle"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beverageSizeTitle"
                android:layout_marginTop="16dp"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <RadioGroup
                android:id="@+id/rgBeverageSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <RadioButton
                    android:id="@+id/rdSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/smallTitle"
                    android:textSize="16sp"
                    />
                <RadioButton
                    android:id="@+id/rdMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mediumTitle"
                    android:textSize="16sp"
                />
                <RadioButton
                    android:id="@+id/rdLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/largeTitle"
                    android:textSize="16sp"
                    />
            </RadioGroup>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flavouringsTitle"
                android:layout_marginTop="16dp"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <Spinner
                android:id="@+id/spn_flavourings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtRegion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regionTitle"
                android:layout_marginTop="16dp"
                >
                <AutoCompleteTextView
                    android:id="@+id/acRegion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/store"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/storeTitle"
                android:layout_marginTop="16dp"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <Spinner
                android:id="@+id/spn_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dateHint"
                android:layout_marginTop="16dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonTitle"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:background="@color/primary_color"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
